[gd_scene load_steps=4 format=2]

[ext_resource path="res://Hand.gd" type="Script" id=1]
[ext_resource path="res://Joint.tscn" type="PackedScene" id=2]
[ext_resource path="res://Joint.gd" type="Script" id=3]

[node name="Hand" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.0871558, -0.336445, 0.937661, 0, 0.941243, 0.33773, -0.996195, -0.0294351, 0.0820348, 7, 5.40557, 0.67691 )

[node name="wrist" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, -0.431435 )
script = ExtResource( 3 )
new_color = Color( 0.843137, 0.0431373, 0.0431373, 1 )

[node name="thumb_p" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0884556, 1.03121 )
script = ExtResource( 3 )
new_color = Color( 0.917647, 0.913725, 0.917647, 1 )

[node name="thumb_i" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.758911, 1.70864 )

[node name="thumb_d" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.39088, 2.23681 )

[node name="thumb_t" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 2.08741, 2.27006 )

[node name="index_p" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.00462437, 1.6032, 0.747719 )

[node name="index_i" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.00360394, 2.42494, 0.84754 )

[node name="index_d" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.0013442, 3.08571, 0.942137 )

[node name="index_t" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.00191975, 3.85218, 0.972097 )

[node name="middle_p" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.00115916, 1.84636, -0.0187019 )

[node name="middle_i" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.0044055, 2.64459, -0.00771093 )

[node name="middle_d" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.00169802, 3.47585, -7.42078e-05 )

[node name="middle_t" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 4.22811, 0 )

[node name="ring_p" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.00492764, 1.72485, -0.891254 )

[node name="ring_i" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 2.5559, -0.96469 )

[node name="ring_d" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 3.38209, -0.941268 )

[node name="ring_t" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 4.19001, -0.875711 )

[node name="pinky_p" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.014853, 1.38416, -1.69375 )

[node name="pinky_i" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 2.16785, -1.70293 )

[node name="pinky_d" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.00223303, 2.89519, -1.74095 )

[node name="pinky_t" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.0100079, 3.67937, -1.81147 )
